fix error in template's variable name

--- a/django_reamaze/templates/django_reamaze/templatetags/reamaze.html
+++ b/django_reamaze/templates/django_reamaze/templatetags/reamaze.html
@@ -44,7 +44,7 @@
       }
       _support['ui'] = {
         widget: true,
-      {%  if channel %}
+      {%  if reamaze_channel %}
         channel: '{{ reamaze_channel }}'
       {% endif %}
       };
