for choose the channel , you need use 'mailbox' and not 'channel'.

--- a/django_reamaze/templates/django_reamaze/templatetags/reamaze.html
+++ b/django_reamaze/templates/django_reamaze/templatetags/reamaze.html
@@ -45,7 +45,7 @@
       _support['ui'] = {
         widget: true,
       {%  if reamaze_channel %}
-        channel: '{{ reamaze_channel }}'
+        mailbox: '{{ reamaze_channel }}'
       {% endif %}
       };
     </script>
