Adding the possibility of putting a prefix for Reamaze user_id

--- a/django_reamaze/templates/django_reamaze/templatetags/reamaze.html
+++ b/django_reamaze/templates/django_reamaze/templatetags/reamaze.html
@@ -19,7 +19,7 @@
     <script type="text/javascript">
       var _support = _support || {};
       _support['account'] = '{{ reamaze_account }}';
-      _support['id'] = '{{ request.user.id }}';
+      _support['id'] = '{{ user_id }}';
       _support['name'] = '{{ request.user.username }}';
       _support['email'] = '{{ request.user.email }}';
 
